# CoGem

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  features.md  help.md  main.py  memory.json  pyproject.toml  setup.py
.ai/: CODEX.md  GEMINI.md  STITCH_WEBSITE.md
clogem/: artifacts.py  cli.py  command_policy.py  config.py  git_context.py  graph.py  llm_clients.py  logging_utils.py  mcp_plugins.py  memory.py  pdf_tools.py  prompts.py  repo_awareness.py  role_mapping.py  symbols.py  task_intent.py  ui.py  validation.py  vector_index.py  write_safety.py
cogem/: cli.py  command_policy.py  docker_validation.py  graph.py  llm_clients.py  mcp_plugins.py  pdf_tools.py  repo_awareness.py  symbols.py  task_intent.py  vector_index.py  visual_review.py  write_safety.py
devai/: cli.py
devai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_artifact_execution.py  test_artifacts_helpers.py  test_command_policy.py  test_commands_roles.py  test_config.py  test_docker_validation.py  test_git_context.py  test_graph.py  test_integration_cli.py  test_llm_clients_async_native.py  test_llm_clients_gemini_grounded.py  test_llm_clients_image_mime.py  test_llm_clients_retry.py  test_logging_utils.py  test_mcp_plugins.py  test_memory_store.py  test_packaging_metadata.py  test_pdf_tools.py  test_pipeline_clipboard.py  test_prompts.py  test_realtime_intent.py  test_repo_awareness.py  test_role_mapping.py  test_routing.py  test_stitch.py  test_symbols.py  test_task_intent.py  test_ui.py  test_validation_copy.py  test_write_safety.py  (+1 more)
(+19 files in other folders)
