[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogem"
version = "0.1.0"
description = "Cogem CLI: Codex + Gemini workflow with validation and repo awareness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=10.0.0",
  "prompt_toolkit>=3.0.0",
  "pypdf>=5.0.0",
  "reportlab>=4.0.0",
]

[project.optional-dependencies]
vector = [
  "lancedb>=0.8.0",
  "sentence-transformers>=2.7.0",
  "numpy>=1.24.0",
  "pyarrow>=14.0.0",
]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.scripts]
cogem = "cogem.cli:main"

[tool.setuptools]
include-package-data = true

